--- a/blog/client/Dockerfile
+++ b/blog/client/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:alpine
 
+# Add these variables to allow running create-react-app in a docker container
+ENV CI=true
+ENV WDS_SOCKET_PORT=0
+
 WORKDIR /app
 COPY package.json ./
 RUN npm install
