--- a/ticketing/auth/package.json
+++ b/ticketing/auth/package.json
@@ -21,5 +21,12 @@
     "mongoose": "^8.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.3",
+    "ts-jest": "^29.1.1"
   }
 }
