--- a/ticketing/auth/package.json
+++ b/ticketing/auth/package.json
@@ -35,6 +35,7 @@
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.3",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
   }
 }
