--- a/ticketing/skaffold.yaml
+++ b/ticketing/skaffold.yaml
@@ -18,3 +18,11 @@ build:
             dest: .
       docker:
         dockerfile: Dockerfile
+    - image: estbndlt/client
+      context: client
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .
+      docker:
+        dockerfile: Dockerfile
