--- a/ticketing/infra/k8s/tickets-depl.yaml
+++ b/ticketing/infra/k8s/tickets-depl.yaml
@@ -15,27 +15,14 @@ spec:
       containers:
         - name: tickets
           image: estbndlt/tickets
-          # image: us.gcr.io/ticketing-dev-409907/tickets
           env:
+            - name: MONGO_URI
+              value: 'mongodb://tickets-mongo-srv:27017/tickets'
             - name: JWT_KEY
-              # command: `kubectl create secret generic jwt-secret --from-literal=JWT_KEY=SECRET`
-              # command: `kubectl create secret generic jwt-secret --from-literal=JWT_KEY=asdf`
-              # where SECRET is a value you choose
               valueFrom:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
-          # steps to run
-          # - update code
-          # - build the docker image with latest tag in service directory
-          #   (default if not specified with estbndlt/tickets:latest)
-          #   - command: `docker build -t estbndlt/tickets .`
-          # - push image to docker hub in service directory
-          #   - command: `docker push estbndlt/tickets`
-          # - create the pod in k8s directory
-          #   - command: `kubectl apply -f tickets-depl.yaml`
-          # - run the command to rollout deployment in k8s directory
-          #   - command: `kubectl rollout restart deployment tickets-depl`
 ---
 apiVersion: v1
 kind: Service
