--- a/ticketing/skaffold.yaml
+++ b/ticketing/skaffold.yaml
@@ -34,3 +34,11 @@ build:
             dest: .
       docker:
         dockerfile: Dockerfile
+    - image: estbndlt/orders
+      context: orders
+      sync:
+        manual:
+          - src: src/**/*.ts
+            dest: .
+      docker:
+        dockerfile: Dockerfile
